<resources>
    <string name="app_name">Sopar</string>

    //editText_hint
    <string name="sign_up_name_hint">이름을 입력해주세요</string>
    <string name="sign_up_phone_number_hint">전화번호를 입력해주세요</string>
    <string name="sign_up_address_hint">주소를 입력해주세요</string>
    <string name="sign_up_car_number_hint">차량번호를 입력해주세요</string>
    <string name="map_search_hint">검색어를 입력해주세요</string>
    <string name="register_parking_lot_address_hint">지번/도로명으로 검색</string>
    <string name="register_parking_lot_name_hint">주차장 이름을 입력해주세요.</string>
    <string name="register_space_hint">공유할 지면 수를 입력해주세요.</string>
    <string name="register_minimum_hint">최소 이용 금액을 입력해주세요.</string>
    <string name="register_monthly_surcharge_hint">월 추가 요금을 입력해주세요.</string>
    <string name="register_hourly_surcharge_hint">시간 추가 요금을 입력해주세요.</string>
    <string name="register_contact_info_hint">\'-\'를 제외하고 입력해주세요.</string>
    <string name="register_caution_hint">주의사항을 입력해주세요.</string>
    <string name="reservation_comment">후기를 남겨주세요.</string>

    //navigation
    <string name="fragment_map">지도</string>
    <string name="fragment_my_page">마이 페이지</string>
    <string name="fragment_setting">설정</string>
    <string name="fragment_search">지도</string>
    <string name="fragment_reservation">예약하기</string>
    <string name="fragment_pay">결제하기</string>
    <string name="fragment_my_parking_lot">주차장 관리</string>
    <string name="fragment_my_reservation">예약 관리</string>

    //signUp
    <string name="sign_up_info">회원가입을 위한 추가정보를 \n입력해주세요! :)</string>
    <string name="sign_up_name">이름</string>
    <string name="sign_up_phone_number">전화번호</string>
    <string name="sign_up_address">주소</string>
    <string name="sign_up_car_number">차량번호</string>
    <string name="sign_up_btn_complete">회원가입</string>

    //entry
    <string name="btn_for_register">등록하기</string>
    <string name="btn_hourly_parking">시간주차</string>
    <string name="btn_monthly_parking">월주차</string>
    <string name="btn_notice">공지사항</string>

    //dialog
    <string name="base_ok">확인</string>
    <string name="base_error">오류가 발생했습니다!\n 다시 시도해주세요!🥲</string>
    <string name="reservation_complete">예약이 등록되었습니다!🙂</string>
    <string name="parkingLot_no_space">주차장이 꽉 찼습니다!\n 다른 곳을 이용해주세요!🙏</string>
    <string name="sign_up_error">기본 정보를 채워주세요!🥲</string>
    <string name="permission_error">필요한 권한을 승인해주세요!</string>
    <string name="reservation_error">예약이 등록되지 않았습니다.\n 다시 시도해주세요!🥲</string>
    <string name="get_parking_lot_error">주차장을 가져오는 과정에서 에러가 발생했습니다!\n 다시 시도해주세요!🥲</string>
    <string name="get_reservation_error">예약을 가져오는 과정에서 에러가 발생했습니다!\n 다시 시도해주세요!🥲</string>
    <string name="delete_reservation_error">예약 삭제 과정에서 에러가 발생했습니다!\n 다시 시도해주세요!🥲</string>
    <string name="delete_parking_lot_error">주차장 삭제 과정에서 에러가 발생했습니다!\n 다시 시도해주세요!🥲</string>
    <string name="check_reservation_delete">취소한 내역은 되돌릴 수 없습니다.\n예약 내역을 취소하시겠습니까?</string>

    //description
    <string name="btn_for_log_out">button_for_log_out</string>
    <string name="btn_entry_screen">button_for_entry_screen</string>
    <string name="btn_map_fragment">button_for_map_fragment</string>
    <string name="icon_bottom_sheet">icon_for_bottom_sheet</string>
    <string name="image_parking_lot">parking_lot_image</string>

    //Toast
    <string name="toast_sign_up_complete">회원가입에 성공하셨습니다!🙂</string>

    //map
    <string name="map_parking_lot_list">주차장 정보</string>

    //reservation
    <string name="reservation_btn_complete">0원 결제하기</string>
    <string name="reservation_info">예약 정보</string>
    <string name="reservation_parking_lot_info">주차장 정보</string>
    <string name="reservation_parking_lot_name">주차장 이름</string>
    <string name="reservation_parking_lot_address">주차장 주소</string>
    <string name="reservation_price">결제 요금</string>
    <string name="reservation_date">이용 날짜</string>
    <string name="reservation_min_cost">최소 요금</string>
    <string name="reservation_monthly_surcharge">추가 요금(월)</string>
    <string name="reservation_hourly_surcharge">추가 요금(시간)</string>
    <string name="reservation_month_duration">대여 기간(월)</string>
    <string name="reservation_start_time">대여 시작 시간</string>
    <string name="reservation_time_duration">대여 시간(h)</string>
    <string name="reservation_available_days">이용 가능 요일</string>
    <string name="reservation_available_time">🔵 파란 부분은 예약이 불가합니다!</string>

    //pay
    <string name="payment_info">예약 정보를 확인해주세요!:)</string>

    //notice
    <string name="no_notice">공지사항이 없습니다!:)</string>

    //register_step
    <string name="complete_info">등록이 진행 중입니다.</string>
    <string name="step_register">주차장 등록</string>
    <string name="step_check">실소유자 심사 중</string>
    <string name="step_complete">주차장 등록 완료</string>

    //register
    <string name="register_step_address">주차장 주소를 입력해주세요.</string>
    <string name="register_step_name">주차장 이름은 무엇인가요?</string>
    <string name="register_step_space">공유할 주차장 면 수를 알려주세요.</string>
    <string name="register_step_car_type">주차 가능 차종을 모두 선택해주세요.</string>
    <string name="register_step_parking_lot_image">주차장 사진을 등록해주세요.</string>
    <string name="register_step_document_image">주차장 인증을 위한 토지대장을\n 등록해주세요.</string>
    <string name="register_step_day_time">주차장 공요 요일과 시간을 알려주세요.</string>
    <string name="register_step_rate">주차장 요금을 설정해주세요.</string>
    <string name="register_step_contact_info">주차장 문의에 사용될\n연락처를 알려주세요.</string>
    <string name="register_step_caution">주차장 이용 시 주의사항이 있을까요?</string>
    <string name="register_step_time">주차장 공유 요일과 시간을 알려주세요.</string>
    <string name="register_step_day">요일</string>
    <string name="register_step_time_setting">시간</string>

    <string name="register_text_address">주차장 주소</string>
    <string name="register_text_parking_lot_name">주차장 이름</string>
    <string name="register_text_space">공유할 지면 수</string>
    <string name="register_text_day">요일</string>
    <string name="register_text_sharing_days">공유 요일</string>
    <string name="register_text_sharing_times">공유 시간</string>
    <string name="register_text_car_types">주차 가능 차종</string>
    <string name="register_text_time">시간</string>
    <string name="register_btn_add_time">+시간 추가</string>
    <string name="register_text_hourly_rate">시간주차</string>
    <string name="register_text_monthly_rate">월주차</string>
    <string name="register_text_minimum">최소 이용 요금</string>
    <string name="register_text_surcharge">추가 요금</string>
    <string name="register_text_contact_info">연락처</string>
    <string name="register_text_caution">주의사항</string>
    <string name="register_btn_next">다음 단계</string>
    <string name="register_main_next">메인으로 가기</string>
    <string name="register_check_info">등록 정보 확인</string>

    //my page
    <string name="no_registered_parkingLot">등록한 주차장이 없습니다!🥲</string>
    <string name="no_reservation">예약 내역이 없습니다!🥲</string>
    <string name="reservation_detail">예약 내역</string>

    //parkingLot
    <string name="parking_lot_no_comment">"후기가 아직 없습니다🥲"</string>
    <string name="parking_lot_comment">요약된 후기</string>
    <string name="parking_lot_comment_amount">후기 개수</string>
    <string name="parking_rating">주차장 평균 후기</string>
    <string name="quote_start"> “</string>
    <string name="quote_end"> ”</string>

</resources>