<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:label="@string/fragment_map"
    app:startDestination="@id/fragment_map">

    <fragment
        android:id="@+id/fragment_map"
        android:name="org.sopar.presentation.map.MapFragment"
        android:label="@string/fragment_map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/fragment_my_page"
        android:name="org.sopar.presentation.mypage.MyPageFragment"
        android:label="@string/fragment_my_page"
        tools:layout="@layout/fragment_my_page" />
    <fragment
        android:id="@+id/fragment_setting"
        android:name="org.sopar.presentation.setting.SettingFragment"
        android:label="@string/fragment_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>