<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_sign_up_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/sign_up_info"
        android:textSize="22sp"
        android:gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@id/layout_sign_up_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_sign_up_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_sign_up_phone_number"
        app:layout_constraintTop_toBottomOf="@id/text_sign_up_info"
        app:layout_constraintRight_toRightOf="@id/text_sign_up_info"
        app:layout_constraintLeft_toLeftOf="@id/text_sign_up_info">
        <TextView
            android:id="@+id/text_sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="30dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_text_sign_up_name"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_name_hint"
            android:padding="15dp"
            android:backgroundTint="@color/base_blue"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_up_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_sign_up_address"
        app:layout_constraintTop_toBottomOf="@id/layout_sign_up_name"
        app:layout_constraintRight_toRightOf="@id/layout_sign_up_name"
        app:layout_constraintLeft_toLeftOf="@id/layout_sign_up_name">
        <TextView
            android:id="@+id/text_sign_up_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_phone_number"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="15dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_text_sign_up_phone_number"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_phone_number_hint"
            android:padding="15dp"
            android:backgroundTint="@color/base_blue"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_up_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_sign_up_car_number"
        app:layout_constraintTop_toBottomOf="@id/layout_sign_up_phone_number"
        app:layout_constraintRight_toRightOf="@id/layout_sign_up_phone_number"
        app:layout_constraintLeft_toLeftOf="@id/layout_sign_up_phone_number">
        <TextView
            android:id="@+id/text_sign_up_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_address"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="15dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_text_sign_up_address"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_address_hint"
            android:padding="15dp"
            android:backgroundTint="@color/base_blue"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_up_car_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_sign_up_address"
        app:layout_constraintRight_toRightOf="@id/layout_sign_up_address"
        app:layout_constraintLeft_toLeftOf="@id/layout_sign_up_address">
        <TextView
            android:id="@+id/text_sign_up_car_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_car_number"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="15dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_text_sign_up_car_number"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_car_number_hint"
            android:padding="15dp"
            android:backgroundTint="@color/base_blue"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_blue"
        android:textColor="@color/white"
        android:text="@string/sign_up_btn_complete"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>