<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.register.RegisterFragment1">

    <TextView
        android:id="@+id/text_step_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/register_step_address"
        android:textSize="22sp"
        android:gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/layout_address"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/text_step_address"
        app:layout_constraintRight_toRightOf="@id/text_step_address"
        app:layout_constraintLeft_toLeftOf="@id/text_step_address">
        <TextView
            android:id="@+id/text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text_address"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="30dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_text_address"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_parking_lot_address_hint"
            android:padding="15dp"
            android:backgroundTint="@color/base_blue"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="1/8"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_next_step"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_blue"
        android:textColor="@color/white"
        android:text="@string/register_btn_next"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>