<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.pay.PayFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="80dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_info"
                android:layout_marginStart="35dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_parking_lot_info"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:padding="20dp"
                android:background="@drawable/base_gray_round_shape"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:id="@+id/image_parking_lot"
                    android:contentDescription="@string/image_parking_lot"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reservation_parking_lot_name"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_parking_lot_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reservation_parking_lot_address"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/text_parking_lot_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reservation_date"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/text_reservation_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:id="@+id/monthly_reservation_info"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reservation_month_duration"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/text_month_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hourly_reservation_info"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reservation_start_time"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/text_start_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reservation_time_duration"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/text_time_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reservation_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_blue"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>